# fcast

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
docs/design/: ChatGPT-Neuralforecast.md  overview.md
notebooks/: 00_bootstrap.ipynb  10_meta_init.ipynb  20_seed_registry.ipynb  30_games_slots.ipynb  40_build_sample_data.ipynb  50_plan_7models.ipynb  60_run_mock_pipeline.ipynb  70_audit_meta_db.ipynb  README.md
scripts/: pack.ps1  test.ps1
src/fcast/: cli.py  config.py  logging.py  types.py
src/fcast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/fcast/dataset/: sample.py
src/fcast/feat/: generators.py
src/fcast/lake/: io.py  paths.py
src/fcast/meta/: db.py  orm.py
src/fcast/meta/dao/: common.py
src/fcast/pipeline/: planner.py  runner.py  validator.py
src/fcast/plugins/: base.py  nixtla_nf.py
tests/: conftest.py
tests/unit/: test_planner.py  test_validator.py
