[project]
name = "fcast"
version = "0.1.0"
description = "Forecast meta DB + lakehouse template (lottery time series)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "sqlalchemy>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "pyarrow>=14.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-html>=4.1",
  "nbmake>=1.5.5",
  "jupyterlab>=4.1",
  "ipykernel>=6.29",
  "ruff>=0.6.0",
]
nixtla = [
  "neuralforecast>=1.7",
  "statsforecast>=1.7",
  "mlforecast>=0.12",
  "utilsforecast>=0.2",
]
spark = [
  "pyspark>=3.5",
]
pg = [
  "psycopg[binary]>=3.2",
]
delta = [
  "delta-spark>=3.2",
]


[project.scripts]
fcast = "fcast.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: integration tests (db/spark)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
